--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </div>
     <div id="about" class="about container">
         <div class="row">
-            <div class="col-md-4 col-xs-4 col-sm-4 text-center"><img src="images/image.png" alt="" class="profile-img"></div>
-            <div class="col-md-4 col-xs-4 col-sm-4"></div>
-            <div class="col-md-4 col-xs-4 col-sm-4">
+            <div class="col-md-4 col-4 col-sm-4 text-center"><img src="images/image.png" alt="" class="profile-img"></div>
+            <div class="col-md-4 col-4 col-sm-4"></div>
+            <div class="col-md-4 col-4 col-sm-4">
                 <h3>Introduction</h3>
                 <p>I am an ambitious scholar and technologist who began my academic career with an impressive 1417th rank in the YGS/LYS Exam, leading to my admission into Bilkent University on a Comprehensive Scholarship. I am bilingual in Turkish and conversational English, which aids in my scholarly pursuits. My professional interests are in Reinforcement Learning, Computer Vision, and Fullstack Development, with a particular affinity for Reinforcement Learning due to its connection to decision-making. I am dedicated to self-improvement and skill development in these areas. Poetry is my creative outlet, reflecting my emotions and experiences. I am passionate about technology and seeks opportunities to contribute to its progress.</p>
             </div>
