--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <i class="fas fa-paper-plane"></i>
                 <span>Collaborate</span>
             </a>
-            <a href="#" class="btn">
+            <a href="images/can_savci_030424.pdf" class="btn">
                 <i class="fas fa-file-download"></i>
                 <span>Download CV</span>
             </a>
@@ -413,4 +413,5 @@
     </script>
 </body>
 </html>
+
 
