--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Header Section -->
     <section id="header" class="header">
         <div class="hero-content">
-            <div class="profile-image"></div>
+            <img class="profile-image" src="images/image.png" alt="Can Savcı">
             <div class="rl-badge">Reinforcement Learning</div>
             <h1 class="hero-title">Can Savcı</h1>
             <p class="hero-subtitle">RL • MARL • QRL • IRL</p>
@@ -413,5 +413,6 @@
     </script>
 </body>
 </html>
+
 
 
