--- a/index.html
+++ b/index.html
@@ -214,6 +214,32 @@
             <div class="timeline-item">
                 <div class="timeline-node"></div>
                 <div class="timeline-content">
+                    <div class="timeline-date">Apr 2025 - Present</div>
+                    <h3 class="timeline-title">Reinforcement Learning Lecturer</h3>
+                    <div class="timeline-company">Kairu – Uçtan Uca AI Programı, İzmir, Türkiye</div>
+                    <p class="timeline-description">
+                        Delivering comprehensive Reinforcement Learning courses covering:
+                        fundamentals, value-based methods (Q-Learning, DQN), policy-based methods (REINFORCE, Actor-Critic, TRPO, PPO, DDPG, SAC, TD3, A3C),
+                        advanced topics (Hierarchical RL, Behavioral Cloning, Reward Design), and practical applications with real datasets using CQL.
+                        Guiding students through both theory and hands-on deployment challenges.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="timeline-item">
+                <div class="timeline-node"></div>
+                <div class="timeline-content">
+                    <div class="timeline-date">Dec 2024 - Apr 2025</div>
+                    <h3 class="timeline-title">Assistant AI Mentor</h3>
+                    <div class="timeline-company">Kairu – Uçtan Uca AI Programı, İzmir, Türkiye</div>
+                    <p class="timeline-description">
+                        Supported AI courses as an assistant mentor, helping students with assignments, project guidance, and clarifying machine learning concepts remotely.
+                    </p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-node"></div>
+                <div class="timeline-content">
                     <div class="timeline-date">Aug 2023 - Mar 2024</div>
                     <h3 class="timeline-title">Computer Vision Engineer</h3>
                     <div class="timeline-company">ArVis Technology</div>
@@ -413,6 +439,7 @@
     </script>
 </body>
 </html>
+
 
 
 
