--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
 
         <div class="rl-areas">
             <div class="rl-card">
+                <div class="rl-icon sar"><i class="fas fa-robot"></i></div>
+                <h3>Single-Agent RL (SARL)</h3>
+                <p>Designing and training individual agents to learn optimal policies in various environments, focusing on classical algorithms such as Q-Learning, SARSA, and Deep Q-Networks (DQN).</p>
+            </div>
+            <div class="rl-card">
                 <div class="rl-icon marl"><i class="fas fa-project-diagram"></i></div>
                 <h3>Multi-Agent RL (MARL)</h3>
                 <p>Developing coordination strategies for multiple agents in shared environments, focusing on Nash equilibria and cooperative policy learning with communication protocols.</p>
@@ -439,6 +444,7 @@
     </script>
 </body>
 </html>
+
 
 
 
