--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="rl-card">
                 <div class="rl-icon sar"><i class="fas fa-robot"></i></div>
                 <h3>Single-Agent RL (SARL)</h3>
-                <p>Designing and training individual agents to learn optimal policies in various environments, focusing on classical algorithms such as Q-Learning, SARSA, and Deep Q-Networks (DQN).</p>
+                <p>Designing and training individual agents to learn optimal policies in various environments, focusing on value-based, policy-based and actor-critic algorithms.</p>
             </div>
             <div class="rl-card">
                 <div class="rl-icon marl"><i class="fas fa-project-diagram"></i></div>
@@ -444,6 +444,7 @@
     </script>
 </body>
 </html>
+
 
 
 
