Added the experience

--- a/index.html
+++ b/index.html
@@ -230,7 +230,20 @@
                     </p>
                 </div>
             </div>
-            
+            <div class="timeline-item">
+                <div class="timeline-node"></div>
+                <div class="timeline-content">
+                    <div class="timeline-date">Dec 2024 - May 2025</div>
+                    <h3 class="timeline-title">AI R&D Engineer</h3>
+                    <div class="timeline-company">Numeric Engineering, Houston, Texas</div>
+                    <p class="timeline-description">
+                        Architected and deployed LLM-based agentic system for energy sector data processing and customer service operations.
+                        Designed complex reasoning pipeline using LangChain and GPT-4 for autonomous database querying, retrieval-augmented generation, and automated visualization.
+                        Built production-ready agent capable of processing customer queries, extracting insights from operational databases, and generating analytical plots.
+                        Delivered end-to-end system deployed to production, handling real-world energy sector use cases.
+                    </p>
+                </div>
+            </div>
             <div class="timeline-item">
                 <div class="timeline-node"></div>
                 <div class="timeline-content">
@@ -444,6 +457,7 @@
     </script>
 </body>
 </html>
+
 
 
 
