--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="timeline-node"></div>
                 <div class="timeline-content">
                     <div class="timeline-date">Dec 2024 - May 2025</div>
-                    <h3 class="timeline-title">AI R&D Engineer</h3>
+                    <h3 class="timeline-title">AI Engineer</h3>
                     <div class="timeline-company">Numeric Engineering, Houston, Texas</div>
                     <p class="timeline-description">
                         Architected and deployed LLM-based agentic system for energy sector data processing and customer service operations.
@@ -457,6 +457,7 @@
     </script>
 </body>
 </html>
+
 
 
 
